--- a/po/eu.po
+++ b/po/eu.po
@@ -2041,7 +2041,7 @@ msgid "Messages"
 msgstr "Mezuak"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr ""
 
 #: ../data/geany.glade.h:463
@@ -3548,7 +3548,7 @@ msgid "Switch to Messages"
 msgstr "Aldatu mezuetara"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr ""
 
 #: ../src/keybindings.c:630
