--- a/po/gl.po
+++ b/po/gl.po
@@ -2149,7 +2149,7 @@ msgid "Messages"
 msgstr "Mensaxes"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Anotacións"
 
 #: ../data/geany.glade.h:463
@@ -3695,7 +3695,7 @@ msgid "Switch to Messages"
 msgstr "Cambiar ás mensaxes"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Cambiar ás anotacións"
 
 #: ../src/keybindings.c:630
