--- a/po/hi.po
+++ b/po/hi.po
@@ -2014,7 +2014,7 @@ msgid "Messages"
 msgstr ""
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr ""
 
 #: ../data/geany.glade.h:463
@@ -3482,7 +3482,7 @@ msgid "Switch to Messages"
 msgstr ""
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr ""
 
 #: ../src/keybindings.c:630
