--- a/po/hu.po
+++ b/po/hu.po
@@ -2132,7 +2132,7 @@ msgid "Messages"
 msgstr "Üzenetek"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Firka"
 
 #: ../data/geany.glade.h:463
@@ -3666,7 +3666,7 @@ msgid "Switch to Messages"
 msgstr "Átváltás az üzenetekre"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Firka ablakra kapcsol"
 
 #: ../src/keybindings.c:630
