--- a/po/ar.po
+++ b/po/ar.po
@@ -2031,7 +2031,7 @@ msgid "Messages"
 msgstr "الرسائل"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr ""
 
 #: ../data/geany.glade.h:463
@@ -3531,7 +3531,7 @@ msgid "Switch to Messages"
 msgstr "انتقل إلى الرسائل"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr ""
 
 #: ../src/keybindings.c:630
