--- a/po/be.po
+++ b/po/be.po
@@ -2115,7 +2115,7 @@ msgid "Messages"
 msgstr "Паведамленні"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Для нататкаў"
 
 #: ../data/geany.glade.h:463
@@ -3640,7 +3640,7 @@ msgid "Switch to Messages"
 msgstr "Перайсці да паведамленняў"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Перайсці да нататкаў"
 
 #: ../src/keybindings.c:630
