--- a/po/ca.po
+++ b/po/ca.po
@@ -2135,7 +2135,7 @@ msgid "Messages"
 msgstr "Missatges"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Esborrany"
 
 #: ../data/geany.glade.h:463
@@ -3656,7 +3656,7 @@ msgid "Switch to Messages"
 msgstr "Canvia als missatges"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Canvia a l'esborrany"
 
 #: ../src/keybindings.c:630
