--- a/po/cs.po
+++ b/po/cs.po
@@ -2128,7 +2128,7 @@ msgid "Messages"
 msgstr "Zprávy"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Poznámky"
 
 #: ../data/geany.glade.h:463
@@ -3665,7 +3665,7 @@ msgid "Switch to Messages"
 msgstr "Přepnout na zprávy"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Přepnout na Poznámky"
 
 #: ../src/keybindings.c:630
