--- a/po/el.po
+++ b/po/el.po
@@ -2155,7 +2155,7 @@ msgid "Messages"
 msgstr "Μηνύματα"
 
 #: ../data/geany.glade.h:460
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Σημειωματάριο"
 
 #: ../data/geany.glade.h:461
@@ -3688,7 +3688,7 @@ msgid "Switch to Messages"
 msgstr "Μετάβαση στα Μηνύματα"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Μετάβαση στο Σημειωματάριο"
 
 #: ../src/keybindings.c:630
