--- a/po/fi.po
+++ b/po/fi.po
@@ -2139,7 +2139,7 @@ msgid "Messages"
 msgstr "Viestit"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Muistilappu"
 
 #: ../data/geany.glade.h:463
@@ -3682,7 +3682,7 @@ msgid "Switch to Messages"
 msgstr "Vaihda viesteihin"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Muistilappuun"
 
 #: ../src/keybindings.c:630
