--- a/po/id.po
+++ b/po/id.po
@@ -2153,7 +2153,7 @@ msgid "Messages"
 msgstr "Pesan"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Catatan"
 
 #: ../data/geany.glade.h:463
@@ -3689,8 +3689,8 @@ msgid "Switch to Messages"
 msgstr "Switch to Messages"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
-msgstr "Switch to Scribble"
+msgid "Switch to Snippets"
+msgstr "Switch to Snippets"
 
 #: ../src/keybindings.c:630
 msgid "Switch to VTE"
