--- a/po/lb.po
+++ b/po/lb.po
@@ -2225,7 +2225,7 @@ msgid "Messages"
 msgstr "Messagen"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Notizen"
 
 #: ../data/geany.glade.h:463
@@ -3797,7 +3797,7 @@ msgid "Switch to Messages"
 msgstr "An d'Saitenleescht wiesselen"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "An den Notizblock wiesselen"
 
 #: ../src/keybindings.c:630
