--- a/po/lt.po
+++ b/po/lt.po
@@ -2104,7 +2104,7 @@ msgid "Messages"
 msgstr "Pranešimai"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Keverzonė"
 
 #: ../data/geany.glade.h:463
@@ -3632,7 +3632,7 @@ msgid "Switch to Messages"
 msgstr "Persijungti į pranešimus"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Persijungti į keverzonę"
 
 #: ../src/keybindings.c:630
