--- a/po/mn.po
+++ b/po/mn.po
@@ -2195,8 +2195,8 @@ msgid "Messages"
 msgstr "Мэдээ"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
-msgstr "Scribble"
+msgid "Snippets"
+msgstr "Snippets"
 
 #: ../data/geany.glade.h:463
 #, fuzzy
@@ -3784,8 +3784,8 @@ msgstr "Мэдээ"
 
 #: ../src/keybindings.c:628
 #, fuzzy
-msgid "Switch to Scribble"
-msgstr "Scribble"
+msgid "Switch to Snippets"
+msgstr "Snippets"
 
 #: ../src/keybindings.c:630
 msgid "Switch to VTE"
