--- a/po/nl.po
+++ b/po/nl.po
@@ -2144,7 +2144,7 @@ msgid "Messages"
 msgstr "Berichten"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Notities"
 
 #: ../data/geany.glade.h:463
@@ -3673,7 +3673,7 @@ msgid "Switch to Messages"
 msgstr "Schakel naar Berichten"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Schakel naar Notities"
 
 #: ../src/keybindings.c:630
