--- a/po/pl.po
+++ b/po/pl.po
@@ -2136,7 +2136,7 @@ msgid "Messages"
 msgstr "Komunikaty"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Brudnopis"
 
 #: ../data/geany.glade.h:463
@@ -3680,7 +3680,7 @@ msgid "Switch to Messages"
 msgstr "Uaktywnij okno komunikatów"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Uaktywnij okno Brudnopisu"
 
 #: ../src/keybindings.c:630
