--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2136,7 +2136,7 @@ msgid "Messages"
 msgstr "Mensagens"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Rascunho"
 
 #: ../data/geany.glade.h:463
@@ -3674,7 +3674,7 @@ msgid "Switch to Messages"
 msgstr "Alternar para Mensagens"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Ir para o Rascunho"
 
 #: ../src/keybindings.c:630
