--- a/po/sk.po
+++ b/po/sk.po
@@ -2111,7 +2111,7 @@ msgid "Messages"
 msgstr "Správy"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Poznámky"
 
 #: ../data/geany.glade.h:463
@@ -3631,7 +3631,7 @@ msgid "Switch to Messages"
 msgstr "Prepnúť na správy"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Prepnúť na poznámky"
 
 #: ../src/keybindings.c:630
