--- a/po/sl.po
+++ b/po/sl.po
@@ -2135,7 +2135,7 @@ msgid "Messages"
 msgstr "Sporočila"
 
 #: ../data/geany.glade.h:462
-msgid "Scribble"
+msgid "Snippets"
 msgstr "Beležka"
 
 #: ../data/geany.glade.h:463
@@ -3695,7 +3695,7 @@ msgid "Switch to Messages"
 msgstr "Preklopi na Sporočila"
 
 #: ../src/keybindings.c:628
-msgid "Switch to Scribble"
+msgid "Switch to Snippets"
 msgstr "Preklopi v beležko"
 
 #: ../src/keybindings.c:630
