--- a/po/eu.po
+++ b/po/eu.po
@@ -3442,11 +3442,11 @@ msgid "Previous Message"
 msgstr "Aurreko mezua"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Bilatu erabilera"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Aurkitu dokumentuaren erabilera"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
