--- a/po/lb.po
+++ b/po/lb.po
@@ -3686,11 +3686,11 @@ msgid "Previous Message"
 msgstr "Viregen Message"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "An allen Dokumenter nosichen"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Am Dokument nosichen"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
