--- a/po/sv.po
+++ b/po/sv.po
@@ -3515,11 +3515,11 @@ msgid "Previous Message"
 msgstr "Föregående meddelande"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Visa användning"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Visa användning"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
