--- a/po/vi.po
+++ b/po/vi.po
@@ -3645,11 +3645,11 @@ msgid "Previous Message"
 msgstr "Thông điệp trước"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Tìm chỗ được dùng"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Tìm chỗ dùng trong tài liệu"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
