--- a/po/ar.po
+++ b/po/ar.po
@@ -3424,11 +3424,11 @@ msgid "Previous Message"
 msgstr "الرسالة السابقة"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr ""
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr ""
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
