--- a/po/ast.po
+++ b/po/ast.po
@@ -3643,11 +3643,11 @@ msgid "Previous Message"
 msgstr "Mensax anterior"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Atopar usu"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Atopar Utilización de Documentu"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
