--- a/po/de.po
+++ b/po/de.po
@@ -3579,11 +3579,11 @@ msgid "Previous Message"
 msgstr "Vorherige Nachricht"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Auftreten finden"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Auftreten im Dokument finden"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
