--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3550,12 +3550,12 @@ msgid "Previous Message"
 msgstr "Previous Message"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
-msgstr "Find Usage"
+msgid "Find In Session"
+msgstr "Find In Session"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
-msgstr "Find Document Usage"
+msgid "Find In Document"
+msgstr "Find In Document"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
 msgid "Navigate back a location"
