--- a/po/es.po
+++ b/po/es.po
@@ -3566,11 +3566,11 @@ msgid "Previous Message"
 msgstr "Mensaje anterior"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Encontrar uso"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Encontrar uso en el documento"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
