--- a/po/et.po
+++ b/po/et.po
@@ -3437,11 +3437,11 @@ msgid "Previous Message"
 msgstr "Eelmine teade"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Otsi kasutamist"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr ""
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
