--- a/po/gl.po
+++ b/po/gl.po
@@ -3589,11 +3589,11 @@ msgid "Previous Message"
 msgstr "Mensaxe anterior"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Uso da busca"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Uso da busca en documentos"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
