--- a/po/hi.po
+++ b/po/hi.po
@@ -3378,11 +3378,11 @@ msgid "Previous Message"
 msgstr ""
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr ""
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr ""
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
