--- a/po/hu.po
+++ b/po/hu.po
@@ -3560,11 +3560,11 @@ msgid "Previous Message"
 msgstr "Előző üzenet"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Használat keresése"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Dokumentum használat keresése"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
