--- a/po/id.po
+++ b/po/id.po
@@ -3583,11 +3583,11 @@ msgid "Previous Message"
 msgstr "Pesan Sebelumnya"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Cari Penggunaan"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Cari Penggunaan Dokumen"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
