--- a/po/it.po
+++ b/po/it.po
@@ -3605,11 +3605,11 @@ msgid "Previous Message"
 msgstr "Messaggio precedente"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Mostra utilizzo"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Mostra utilizzo nel documento"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
