--- a/po/ja.po
+++ b/po/ja.po
@@ -3496,11 +3496,11 @@ msgid "Previous Message"
 msgstr "前のメッセージ"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "使い方を検索"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "文書の使い方を検索"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
