--- a/po/kk.po
+++ b/po/kk.po
@@ -3419,11 +3419,11 @@ msgid "Previous Message"
 msgstr "Алдыңғы хабарлама"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Қолданылуын табу"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Құжатта қолданылуын табу"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
