--- a/po/nl.po
+++ b/po/nl.po
@@ -3569,11 +3569,11 @@ msgid "Previous Message"
 msgstr "Vorig bericht"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Zoek woord in sessie"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Zoek woord in document"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
