--- a/po/pl.po
+++ b/po/pl.po
@@ -3573,11 +3573,11 @@ msgid "Previous Message"
 msgstr "Poprzedni komunikat"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Znajdź wykorzystanie"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Znajdź wykorzystanie w dokumencie"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
