--- a/po/pt.po
+++ b/po/pt.po
@@ -3554,11 +3554,11 @@ msgid "Previous Message"
 msgstr "Mensagem anterior"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Localizar utilização"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Localizar utilização no documento atual"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
