--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -3568,11 +3568,11 @@ msgid "Previous Message"
 msgstr "Mensagem Prévia"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Encontrar Uso"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Encontrar Uso do Documento"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
