--- a/po/ro.po
+++ b/po/ro.po
@@ -3687,12 +3687,12 @@ msgid "Previous Message"
 msgstr "Mesajul anterior"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Caută folosiri"
 
 #: ../src/keybindings.c:553
 #, fuzzy
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Caută folosiri"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
