--- a/po/ru.po
+++ b/po/ru.po
@@ -3542,11 +3542,11 @@ msgid "Previous Message"
 msgstr "Предыдущее сообщение"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Найти использование"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Статистика документа"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
