--- a/po/sk.po
+++ b/po/sk.po
@@ -3527,11 +3527,11 @@ msgid "Previous Message"
 msgstr "Predchádzajúca správa"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Nájsť použitie"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Nájsť použitie v dokumente"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
