--- a/po/sl.po
+++ b/po/sl.po
@@ -3589,11 +3589,11 @@ msgid "Previous Message"
 msgstr "Predhodno sporočilo"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Najdi uporabo"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Najdi uporabo dokumenta"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
