--- a/po/uk.po
+++ b/po/uk.po
@@ -3734,12 +3734,12 @@ msgid "Previous Message"
 msgstr "Наступне повідомлення"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "Користування пошуком"
 
 #: ../src/keybindings.c:553
 #, fuzzy
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "Користування пошуком"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
