--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3412,11 +3412,11 @@ msgid "Previous Message"
 msgstr "上一个信息"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "查找用法"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "查找文档用法"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
