--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3497,11 +3497,11 @@ msgid "Previous Message"
 msgstr "上一個訊息"
 
 #: ../src/keybindings.c:550
-msgid "Find Usage"
+msgid "Find In Session"
 msgstr "尋找用法"
 
 #: ../src/keybindings.c:553
-msgid "Find Document Usage"
+msgid "Find In Document"
 msgstr "尋找用法文件"
 
 #: ../src/keybindings.c:560 ../src/toolbar.c:70
