--- a/po/ar.po
+++ b/po/ar.po
@@ -4761,7 +4761,7 @@ msgstr ""
 #: ../src/symbols.c:1662
 #, fuzzy, c-format
 msgid ""
-"Usage: %s -g <Tags File> <File list>\n"
+"Usage: %s -g <Tags File> <File list>"
 "\n"
 msgstr ""
 "Usage: %s -g <Tag File> <File list>\n"
@@ -4772,11 +4772,11 @@ msgstr ""
 msgid ""
 "Example:\n"
 "CFLAGS=`pkg-config gtk+-2.0 --cflags` %s -g gtk2.c.tags /usr/include/gtk-2.0/"
-"gtk/gtk.h\n"
+"gtk/gtk.h"
 msgstr ""
 "Example:\n"
 "CFLAGS=`pkg-config gtk+-2.0 --cflags` %s -g gtk2.c.tags /usr/include/gtk-2.0/"
-"gtk/gtk.h\n"
+"gtk/gtk.h"
 
 #: ../src/symbols.c:1677
 #, fuzzy
